# ai-game-night

./: .gitignore  BATTLESHIP_GAME_NIGHT.md  GameNight.md  README.md  infrastructure.agent.md  player.agent.md  pyproject.toml
docs/: ARCHITECTURE.md  git_flow_for_players.md  how_to_add_bot.md  how_to_add_game.md
scripts/: run_game.py  run_tournament.py
src/gamenight/: __init__.py
src/gamenight/cli/: main.py
src/gamenight/core/: bots.py  bracket.py  match.py  protocols.py  registry.py  replay.py  tournament.py  types.py
src/gamenight/games/: __init__.py
src/gamenight/games/battleship/: BOT_SPEC.md  EDGE_CASES.md  EXAMPLES.md  README.md  bracket_gui.py  game.py  gui.py
src/gamenight/games/battleship/bots/baselines/: greedy_bot.py  human_terminal.py
src/gamenight/games/battleship/bots/players/: README.md
src/gamenight/games/battleship/prompts/: greedy_bot_prompt.md
src/gamenight/games/connect_four/: BOT_SPEC.md  EDGE_CASES.md  EXAMPLES.md  README.md  game.py  gui.py
src/gamenight/games/connect_four/bots/: __init__.py
src/gamenight/games/connect_four/bots/baselines/: greedy_bot.py  human_terminal.py  random_bot.py
src/gamenight/games/connect_four/bots/players/: README.md
src/gamenight/games/connect_four/prompts/: greedy_bot_prompt.md
src/gamenight/games/tictactoe/: BOT_SPEC.md  EXAMPLES.md  README.md  __init__.py  game.py  gui.py
src/gamenight/games/tictactoe/bots/: __init__.py
src/gamenight/games/tictactoe/prompts/: greedy_bot_prompt.md
src/gamenight/games/tictactoe/scripts/: analyze_artifacts.py
(+14 files in other folders)
