[project]
name = "ai-game-night"
version = "0.1.0"
description = "Modular game night bot framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.12.3",
]

[project.scripts]
gamenight = "gamenight.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gamenight"]

[tool.ruff]
line-length = 100
